<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/navigation_item_one"
            android:title="@string/menu_item_one"
            android:icon="@mipmap/drawer_menu_icon_home"/>
        <item
            android:id="@+id/navigation_item_two"
            android:title="@string/menu_item_two"
            android:icon="@mipmap/drawer_menu_icon_home"/>
        <item
            android:id="@+id/navigation_item_three"
            android:title="@string/menu_item_three"
            android:icon="@mipmap/drawer_menu_icon_home"/>
        <item
            android:id="@+id/navigation_item_four"
            android:title="@string/menu_item_four"
            android:icon="@mipmap/drawer_menu_icon_home"/>
        <item
            android:id="@+id/navigation_item_five"
            android:title="@string/menu_item_five"
            android:icon="@mipmap/drawer_menu_icon_home"/>
        <item
            android:id="@+id/navigation_item_six"
            android:title="@string/menu_item_six"
            android:icon="@mipmap/drawer_menu_icon_home"/>
    </group>
</menu>