<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="150dp"
    android:background="@color/colorPrimaryDark"
    android:padding="16dp"
    android:theme="@style/ThemeOverlay.AppCompat.Dark"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/userImageHeader"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:background="@drawable/sample_user_drawer_menu"
        android:contentDescription="@string/user_image_header"
        android:padding="5dp"
        android:scaleType="centerCrop"
        android:layout_centerVertical="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/userNameHeader"
        android:text="@string/nome_usuario_sample"
        android:textSize="14sp"
        android:textColor="@android:color/white"
        android:textStyle="bold"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:layout_centerVertical="true"
        android:layout_toRightOf="@+id/userImageHeader"
        android:layout_toEndOf="@+id/userImageHeader" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/userEmailHeader"
        android:text="@string/email_usuario_sample"
        android:textSize="12sp"
        android:textColor="@android:color/white"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:layout_below="@+id/userNameHeader"
        android:layout_alignLeft="@+id/userNameHeader"
        android:layout_alignStart="@+id/userNameHeader" />

</RelativeLayout>