<!-- This DrawerLayout has two children at the root  -->
<android.support.v4.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:fab="http://schemas.android.com/apk/res-auto"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorWhite">

    <!-- This LinearLayout represents the contents of the screen  -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <!-- The ActionBar displayed at the top -->
        <include
            layout="@layout/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <!-- The main content view where fragments are loaded -->
        <FrameLayout
            android:id="@+id/flContent"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="?attr/actionBarSize"/>
    </LinearLayout>

    <!-- Floating Action Menu -->
    <com.github.clans.fab.FloatingActionMenu
        android:id="@+id/floating_action_menu"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        fab:menu_fab_size="normal"
        fab:menu_showShadow="true"
        fab:menu_shadowColor="#66000000"
        fab:menu_shadowRadius="4dp"
        fab:menu_shadowXOffset="1dp"
        fab:menu_shadowYOffset="3dp"
        fab:menu_colorNormal="@color/colorAccent"
        fab:menu_colorPressed="@color/colorAccentDark"
        fab:menu_colorRipple="#99FFFFFF"
        fab:menu_animationDelayPerItem="50"
        fab:menu_icon="@drawable/fab_add"
        fab:menu_buttonSpacing="0dp"
        fab:menu_labels_margin="0dp"
        fab:menu_labels_showAnimation="@anim/fab_slide_in_from_right"
        fab:menu_labels_hideAnimation="@anim/fab_slide_out_to_right"
        fab:menu_labels_paddingTop="4dp"
        fab:menu_labels_paddingRight="8dp"
        fab:menu_labels_paddingBottom="4dp"
        fab:menu_labels_paddingLeft="8dp"
        fab:menu_labels_padding="8dp"
        fab:menu_labels_textColor="#FFFFFF"
        fab:menu_labels_textSize="14sp"
        fab:menu_labels_cornerRadius="3dp"
        fab:menu_labels_colorNormal="#333333"
        fab:menu_labels_colorPressed="#444444"
        fab:menu_labels_colorRipple="#66FFFFFF"
        fab:menu_labels_singleLine="false"
        fab:menu_labels_ellipsize="none"
        fab:menu_labels_maxLines="-1"
        fab:menu_labels_position="left"
        fab:menu_openDirection="up"
        fab:menu_backgroundColor="@android:color/transparent"
        android:alpha="0.9">

        <com.github.clans.fab.FloatingActionButton
            android:id="@+id/floating_action_one"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@mipmap/floating_menu_icon_home"
            fab:fab_size="mini"
            fab:fab_label="@string/menu_item_one"
            app:fab_colorNormal="@color/colorAccent"
            android:alpha="0.9" />

        <com.github.clans.fab.FloatingActionButton
            android:id="@+id/floating_action_two"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@mipmap/floating_menu_icon_home"
            fab:fab_size="mini"
            fab:fab_label="@string/menu_item_two"
            app:fab_colorNormal="@color/colorAccent"
            android:alpha="0.9" />

        <com.github.clans.fab.FloatingActionButton
            android:id="@+id/floating_action_three"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@mipmap/floating_menu_icon_home"
            fab:fab_size="mini"
            fab:fab_label="@string/menu_item_three"
            app:fab_colorNormal="@color/colorAccent"
            android:alpha="0.9" />

        <com.github.clans.fab.FloatingActionButton
            android:id="@+id/floating_action_four"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@mipmap/floating_menu_icon_home"
            fab:fab_size="mini"
            fab:fab_label="@string/menu_item_four"
            app:fab_colorNormal="@color/colorAccent"
            android:alpha="0.9" />

        <com.github.clans.fab.FloatingActionButton
            android:id="@+id/floating_action_five"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@mipmap/floating_menu_icon_home"
            fab:fab_size="mini"
            fab:fab_label="@string/menu_item_five"
            app:fab_colorNormal="@color/colorAccent"
            android:alpha="0.9" />

    </com.github.clans.fab.FloatingActionMenu>

    <!-- The navigation drawer that comes from the left -->
    <!-- Note that `android:layout_gravity` needs to be set to 'start' -->
    <android.support.design.widget.NavigationView
        android:id="@+id/nvView"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:background="@android:color/white"
        app:menu="@menu/drawer_menu"
        app:headerLayout="@layout/navigation_header"/>

</android.support.v4.widget.DrawerLayout>